# CSocketProgrammingPractice

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt
src/MultiClient/: CMakeLists.txt  multi_tcp_echo_client.c  multi_tcp_echo_server.c
src/Multicast/: CMakeLists.txt  mcast_receiver.c  mcast_receiver_oldapi.c  mcast_sender.c
src/MulticastFT/: CMakeLists.txt  mcast_ft_receiver.c  mcast_ft_sender.c
src/SimpleFT/: CMakeLists.txt  simple_ft.h  simple_ft_receiver.c  simple_ft_sender.c  simple_ft_sender_with_name_resolution.c
src/SimpleTcp/: CMakeLists.txt  simple_tcp_client.c  simple_tcp_client_with_name_resolution.c  simple_tcp_server.c
src/SimpleUdp/: CMakeLists.txt  simple_udp_receiver.c  simple_udp_sender.c  simple_udp_sender_with_name_resolution.c  simple_udp_sender_with_nr.c
src/UdpEcho/: CMakeLists.txt  udp_echo.h  udp_echo_client.c  udp_echo_server.c
src/my_library/: CMakeLists.txt  die_with_message.c  get_address.c  get_address.h  make_directory.c  make_directory.h  my_library.h  print_sys_err_msg.c  print_sys_err_msg.h
src/test/: CMakeLists.txt  getaddrinfo.c  perror.c
